fix some alignment issues, add starry background. TODO: fix starry background on mobile view

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -247,18 +247,19 @@ a:hover {
   box-sizing: border-box;
   margin-top: -6rem;
   padding-top: 4rem;
+  gap: 1rem;
 }
 
 .hero-galaxy {
-  width: 40%;
-  height: 500px;
+  width: 35%;
+  height: 350px;
   position: relative;
   z-index: 1;
   flex-shrink: 0;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
-  margin-right: 2rem;
+  padding-bottom: 1rem;
 }
 
 .hero-galaxy .webgl {
@@ -269,8 +270,8 @@ a:hover {
 }
 
 .hero-content {
-  width: 60%;
-  padding: 0 1rem 0 2rem;
+  width: 65%;
+  padding: 0 1rem 0 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -324,8 +325,8 @@ a:hover {
   }
   
   .hero-galaxy {
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
     margin-right: 0;
     margin-bottom: 1rem;
   }
@@ -355,8 +356,8 @@ a:hover {
   }
   
   .hero-galaxy {
-    width: 35%;
-    height: 400px;
+    width: 30%;
+    height: 300px;
   }
   
   .hero-content {
